--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -8,6 +8,6 @@ RUN pnpm install
 
 COPY . .
 
-EXPOSE 5173
+EXPOSE 8000
 
-CMD ["pnpm", "run", "dev", "--host"]
+CMD ["pnpm", "run", "dev", "--host", "--port", "8000"]
