--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,10 @@ services:
       context: .
       dockerfile: Dockerfile.dev
     ports:
-      - "5173:5173"
+      - "8000:8080"
     volumes:
       - .:/app
       - /app/node_modules
     environment:
       - VITE_DEV_SERVER_HOST=0.0.0.0
+      - NODE_ENV=development
