--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.90.9",
     "@tanstack/react-router": "^1.136.6",
     "@tanstack/react-router-devtools": "^1.136.6",
+    "@tanstack/react-table": "^8.21.3",
     "clsx": "^2.1.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
