--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@tanstack/react-router-devtools": "^1.136.6",
     "@tanstack/react-table": "^8.21.3",
     "clsx": "^2.1.1",
+    "openapi-fetch": "^0.15.0",
+    "openapi-typescript-helpers": "^0.0.15",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
